--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
   </style>
 </head>
 <body>
-  <iframe src="https://github.com/orgs/CauchyE/projects/1" class="fill"></iframe>
+  <iframe src="https://github.com/orgs/CauchyE/projects/1" class="fill" frameborder="0"></iframe>
   <br />
-  <iframe src="https://github.com/orgs/CauchyE/projects/2" class="fill"></iframe>
+  <iframe src="https://github.com/orgs/CauchyE/projects/2" class="fill" frameborder="0"></iframe>
   <br />
-  <iframe src="https://github.com/orgs/CauchyE/projects/3" class="fill"></iframe>
+  <iframe src="https://github.com/orgs/CauchyE/projects/3" class="fill" frameborder="0"></iframe>
   <br />
-  <iframe src="https://github.com/orgs/CauchyE/projects/4" class="fill"></iframe>
+  <iframe src="https://github.com/orgs/CauchyE/projects/4" class="fill" frameborder="0"></iframe>
   <br />
-  <iframe src="https://github.com/orgs/CauchyE/projects/5" class="fill"></iframe>
+  <iframe src="https://github.com/orgs/CauchyE/projects/5" class="fill" frameborder="0"></iframe>
   <br />
-  <iframe src="https://github.com/orgs/CauchyE/projects/6" class="fill"></iframe>
+  <iframe src="https://github.com/orgs/CauchyE/projects/6" class="fill" frameborder="0"></iframe>
   <br />
-  <iframe src="https://github.com/orgs/CauchyE/projects/7" class="fill"></iframe>
+  <iframe src="https://github.com/orgs/CauchyE/projects/7" class="fill" frameborder="0"></iframe>
   <br />
 </body>
 </html>
