--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
   <title>Projects</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
+    body {
+      margin: 0;
+    }
+    
     .fill {
       display: block;
       width: 100%;
       height: 100vh;
+      margin: 0;
     }
   </style>
 </head>
