--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       height: 100vh;
       margin: 0;
       padding: 0 8px;
+      box-sizing: border-box;
       display: flex;
       flex-direction: column;
     }
