--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     .column-inner {
       background: whitesmoke;
       border-radius: 8px;
+      margin: 0;
       padding: 8px;
       flex: auto;
       overflow-y: auto;
