--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       background: whitesmoke;
       border-radius: 8px;
       margin: 0;
+      margin-bottom: 8px;
       padding: 8px;
       flex: auto;
       overflow-y: auto;
