--- a/index.html
+++ b/index.html
@@ -26,9 +26,12 @@
     }
 
     .column {
-      margin: 0 8px;
+      margin-right: 8px;
       display: flex;
       flex-direction: column;
+    }
+    .column:last-child {
+      margin-right: 0;
     }
     .column-inner {
       background: whitesmoke;
