--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
       list-style-type:none;
       word-break: break-all;
     }
+    .card:last-child {
+      margin-bottom: 0;
+    }
   </style>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/preact/10.5.13/preact.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/htm/3.0.4/htm.min.js"></script>
