feat: markdown checkbox and emoji

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/preact/10.5.13/preact.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/htm/3.0.4/htm.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown.js/0.5.0/markdown.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/emoji-js@3.6.0/lib/emoji.min.js"></script>
   <script>
     function getParam(name, url) {
       if (!url) url = window.location.href;
@@ -109,10 +110,20 @@
       return await fetch(url, options).then(res => res.json());
     }
 
+    const emoji = emoji = new EmojiConvertor();
+
     const html = htm.bind(preact.h);
     const Card = props => html`
       <li class="card">
-        ${ props.card.note ? html`<span innerHTML=${markdown.toHTML(props.card.note)}></span>` : html``}
+        ${ props.card.note ? html`<span innerHTML=${markdown
+          .toHTML(
+            emoji.replace_colons(
+              props.card.note
+                .replace('- [ ]', '- ☐')
+                .replace('- [x]', '- ☒')
+            )
+          )
+        }></span>` : html``}
         ${ props.card.issue ? html`
           <a href="${props.card.issue.html_url}" target="_blank">${props.card.issue.title}</a>
         ` : html`` }
