fix: stupid mistake

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       return await fetch(url, options).then(res => res.json());
     }
 
-    const emoji = emoji = new EmojiConvertor();
+    const emoji = new EmojiConvertor();
 
     const html = htm.bind(preact.h);
     const Card = props => html`
