--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </style>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/preact/10.5.13/preact.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/htm/3.0.4/htm.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown.js/0.5.0/markdown.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/emoji-js@3.6.0/lib/emoji.min.js"></script>
   <script>
     function getParam(name, url) {
@@ -117,8 +117,7 @@
     const Card = props => html`
       <li class="card">
         ${ props.card.note ? html`<span innerHTML=${emoji.replace_colons(
-          markdown
-          .toHTML(
+            marked(
               props.card.note
                 .replaceAll('- [ ]', '- ☐')
                 .replaceAll('- [x]', '- ☒')
